[tool.poetry]
name = "count_comments"
version = "1.0.0"
description = ""
authors = ["doublekai <wangkai@8lab.cn>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
rich = "^12.0.0"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
